[package]
name = "poker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
num-derive = "0.4.1"
num-traits = "0.2.17"
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.56"
